traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:1: error: value unary_! is not a member of Unit
  while (!posFinale()) {
         ^